; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwi/extr_if_iwi.c_iwi_led_off.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwi/extr_if_iwi.c_iwi_led_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwi_softc = type { i32, i32, i32 }

@iwi_led_done = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @iwi_led_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwi_led_off(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.iwi_softc*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.iwi_softc*
  store %struct.iwi_softc* %6, %struct.iwi_softc** %3, align 8
  %7 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %8 = call i32 @iwi_read_event(%struct.iwi_softc* %7)
  store i32 %8, i32* %4, align 4
  %9 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %10 = getelementptr inbounds %struct.iwi_softc, %struct.iwi_softc* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = xor i32 %11, -1
  %13 = load i32, i32* %4, align 4
  %14 = and i32 %13, %12
  store i32 %14, i32* %4, align 4
  %15 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @iwi_toggle_event(i32 %16)
  %18 = call i32 @iwi_write_event(%struct.iwi_softc* %15, i32 %17)
  %19 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %20 = getelementptr inbounds %struct.iwi_softc, %struct.iwi_softc* %19, i32 0, i32 1
  %21 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %22 = getelementptr inbounds %struct.iwi_softc, %struct.iwi_softc* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* @iwi_led_done, align 4
  %25 = load %struct.iwi_softc*, %struct.iwi_softc** %3, align 8
  %26 = call i32 @callout_reset(i32* %20, i32 %23, i32 %24, %struct.iwi_softc* %25)
  ret void
}

declare dso_local i32 @iwi_read_event(%struct.iwi_softc*) #1

declare dso_local i32 @iwi_write_event(%struct.iwi_softc*, i32) #1

declare dso_local i32 @iwi_toggle_event(i32) #1

declare dso_local i32 @callout_reset(i32*, i32, i32, %struct.iwi_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
